--- a/src/styles/edit.module.css
+++ b/src/styles/edit.module.css
@@ -67,3 +67,142 @@
       color: #ffffff;
   }
   
+
+  /* --------------- */
+  .main {
+    max-width: 1510px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #c850c0;
+    background: -webkit-linear-gradient(45deg, #4158d0, #c850c0);
+    background: -o-linear-gradient(45deg, #4158d0, #c850c0);
+    background: -moz-linear-gradient(45deg, #4158d0, #c850c0);
+    background: linear-gradient(45deg, #4158d0, #c850c0);
+    min-height: 55rem;
+  }
+  .section {
+    height: fit-content;
+    width: 50rem;
+    background-color: rgb(255, 255, 255);
+    color: grey;
+  }
+  
+  .add{
+    width: 9.5rem;
+    margin-top: 1rem;
+    border: none;
+  }
+  .search{
+    width: 12rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+  
+  .dropdown {
+    display: inline-block;
+    position: relative;
+    width: fit-content;
+    /* margin-left: 44%;
+    margin-top: -4%; */
+  }
+  
+  .dd-button {
+    display: inline-block;
+    border: 1px solid gray;
+    border-radius: 4px;
+    padding: 10px 30px 10px 20px;
+    background-color: #ffffff;
+    cursor: pointer;
+    white-space: nowrap;
+    width: 10vw;
+    text-align: left;
+    /* margin-top: -70%; */
+  }
+  
+  .dd-button:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    margin-left: 25%;
+    transform: translateY(-50%);
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid black;
+  }
+  .sortby {
+    position: absolute;
+    margin-top: 7%;
+    margin-left: 40%;
+    font-size: larger;
+    font-weight: bold;
+  
+    width: fit-content;
+  }
+  .dd-button:hover {
+    background-color: #eeeeee;
+  }
+  
+  .dd-input {
+    display: none;
+  }
+  
+  .dd-menu {
+    position: absolute;
+    width: 10vw;
+    margin-left: 50%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 0;
+    margin: 2px 0 0 0;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    list-style-type: none;
+    z-index: 1;
+  }
+  
+  .dd-input + .dd-menu {
+    display: none;
+  }
+  
+  .dd-input:checked + .dd-menu {
+    display: block;
+  }
+  
+  .dd-menu li {
+    padding: 10px 20px;
+    cursor: pointer;
+    white-space: nowrap;
+  }
+  
+  .dd-menu li:hover {
+    background-color: #f6f6f6;
+  }
+  
+  .dd-menu li a {
+    display: block;
+    margin: -10px -20px;
+    padding: 10px 20px;
+  }
+  .pagelink {
+    color: #6a4029;
+    background-color: #ffffff;
+    font-weight: bold;
+  }
+  .pagelink2 {
+    color: white;
+    background-color: #666a72;
+    font-weight: bold;
+  }
+  .dd-menu li.divider {
+    padding: 0;
+    border-bottom: 1px solid #cccccc;
+  }
+  .page {
+    margin-left: 80%;
+  }
+  
+  
