--- a/src/styles/edit.module.css
+++ b/src/styles/edit.module.css
@@ -88,6 +88,12 @@
     background-color: rgb(255, 255, 255);
     color: grey;
   }
+  /* .section-head{
+    background-color: #36304A
+  }
+  .section-head{
+    background-color: #36304A
+  } */
   
   .add{
     width: 9.5rem;
