--- a/src/styles/delete.module.css
+++ b/src/styles/delete.module.css
@@ -11,12 +11,12 @@
   }
   
   .modal-content {
-    width: 400px;
+    /* width: 400px; */
     text-align: center;
     border-radius: 20px;
     padding-top: 30px;
     padding-bottom: 30px;
-    height: 35vh;
+    /* height: 35vh; */
     background:  white !important;
   }
   
@@ -40,13 +40,15 @@
   }
   
   .modal-footer {
-      display: flex;
+      /* display: flex; */
       justify-content: space-evenly;
-      margin-top: 30px;
+      margin-top: 10px;
+      margin-right: 1rem;
   }
   
   .button {
       width: 130px;
+      margin-left: 1rem;
       height: 60px;
       font-family: 'Poppins';
       font-size: 25px;
